Bug 317803 - Kmail2 renders colors based on the user system colors rather than the default colors browsers use.
Summary: Kmail2 renders colors based on the user system colors rather than the default...
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: UI (other bugs)
Version First Reported In: 5.4.0
Platform: Ubuntu Linux
: NOR major
Target Milestone: ---
Assignee: kdepim bugs
URL: http://www.midvalleypolicecouncil.org...
Keywords: usability
: 346135 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-04-04 00:17 UTC by vayu
Modified: 2018-11-22 17:58 UTC (History)
24 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.10.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vayu 2013-04-04 00:17:59 UTC
This is similar to the recently fixed: Bug 317198 - "background-color for message window for HTML Message need to be adjustable".

The resolution of that bug# will solve the problem for users who know how to, but it is not complete.    When HTML is produced it has the expectation of a white page and black text default.  If a KDE user changes her system colors, she should not have to go and configure kmail colors to read an HTML email that would render readably in a browser or another email client.   Giving a user the choice of color configuration is a great feature (and why I love KDE) but the real issue is that Kmail does not render HTML with the same colors browsers do. 

I suggest this is a bug and that unless a user changes Kmail colors that the HTML reader renders with the colors browsers do in their default settings.

Visual example of the problem:  http://www.midvalleypolicecouncil.org/email/kmail-render-problem.html


Reproducible: Always

Steps to Reproduce:
1. Go to system settings/application appearance/colors/colors.
2. Change View background color to black, view text to white.
3. Go to Kmail and display an HTML email that has specified either black text or a white background but not both in the HTML code.
(The email must have specifically defined in it's HTML code either light text or dark background but not both)
Actual Results:  
Invisible or barely visible text depending on how close to the system colors the text or background was defined.

Expected Results:  
Visible content at least similar in colors to the default colors that Firefox or Chrome would render.

http://www.midvalleypolicecouncil.org/email/kmail-render-problem.html

Kubuntu 12.04, KDE SC 4.10.1

I've listed this as a major feature broken because I often have to forward emails back to myself and read them in Thunderbird.  Needing 2 email clients seems major.

With the new fix it's still a major problem because I imagine the situation where my kids know how and like to change their system colors and then can't read their emails.
Comment 1 mathieu.beliveau.1 2014-01-15 10:01:02 UTC
I concur on this. The expectation of a white background and black fonts renders unreadable most of the html email I receive - while using the Obsidian Coast color scheme.

In this regard and in my opinion, this really should be considered as a major usability issue. Also, the proposed fix seems to be like the most sensible one.
Comment 2 Laurent Montel 2014-01-15 12:43:38 UTC
Indeed I need to look at it.
I put on my todo.
Comment 3 Laurent Montel 2014-02-04 08:25:58 UTC
Ok I will work on this week.
Could you attach an example email as mbox here pleasE ?
Comment 4 Laurent Montel 2014-02-05 07:28:24 UTC
I need to adapt mail css.
It's in progress.
Comment 5 Mark 2016-10-22 10:23:14 UTC
I too would like to see this addressed. I appreciate all the hard work that has gone into KMail over the years, but it seems in this respect it's been superannuated somewhat by trends in desktop themes. 

Running a dark theme makes ~80% of the HTML emails I receive unreadable in KMail, which is a shame as I otherwise love it and Kontact alike. 

In it's simplest form, it could be a checkbox called "Force white background and black text for HTML email."
Comment 6 pvdm 2017-01-11 07:31:27 UTC
I confirm that I have the same problem. I can confirm what MArc said.
I would like to have this resolved. Thanks.
Comment 7 Denis Kurz 2017-01-14 14:38:55 UTC
Still an issue in 5.4.1. Using Breeze Dark, I often see light grey text on white background in HTML mails.
Comment 8 avlas 2017-05-12 15:41:59 UTC
I would like to start using a dark theme, but, like happens to others, this is keeping me from doing it :/

I hope it gets some attention from KDE devs :)
Comment 9 Denis Kurz 2017-05-19 08:42:41 UTC
*** Bug 362608 has been marked as a duplicate of this bug. ***
Comment 10 toszlanyi 2017-06-07 13:06:07 UTC
+1 from me even though this is already marked as confirmed. I am using KDE since the 3.10 time mainly with default bright colour but just recently / finally I am very happy with a default dark colour theme as like Breeze Dark. I got my Firefox colour issues solved with a custom userContent.css file as can be found on some forums.

Anyhow to see a native KDE application cannot be fixed in a similar way makes me sad because as many others stated it is almost impossible to read some html mails when they are not coded properly. Like a lot of newsletters sometimes have a perfect bright background setup with dark font colour, but sometimes they haven't and the dark system background is used. Reading then in html is almost impossible. Switching to text mode is also not a solution as a lot of information are not shown then when the original html mail contains pictures etc.

Even if there is no button in a setup window of kmail, but something like a custom .css file to render html in kmail would be a very good option. thanks a lot...
Comment 11 samroq 2017-07-29 01:42:42 UTC
Also have this issue. Any idea on when (if ever) we will get a fix?
Comment 12 Chris 2017-07-29 20:34:24 UTC
Hi, same here. Using a dark theme color makes some HTML unreadable since the text font is too dark in the message pane.
Comment 13 Salvo "LtWorf" Tomaselli 2017-07-30 08:36:53 UTC
(In reply to Chris from comment #12)
> Hi, same here. Using a dark theme color makes some HTML unreadable since the
> text font is too dark in the message pane.

That's a different issue, it's a problem with who sends the crappy HTML, not with the client itself.

Just disable HTML in emails to live happily ever after :)
Comment 14 Andras 2017-09-08 01:57:23 UTC
Same here, It's really messed up with dark themes like breeze-dark. Dark text on dark background and white on white, etc. I also had theme issue with Thunderbird and Firefox but it's easy to fix with their own dark themes and "apply colors to non-qt app" unchecked or with css configuration. I think KMail should work out of the box with all KDE Plasma settings as a QT application.
Comment 15 Bart 2018-06-24 12:53:42 UTC
Same problem over here. Makes kmail2 almost unusable.
Comment 16 michele mazza 2018-06-25 15:26:32 UTC
This can be worked around by installing and using different header themes.
View -> Headers -> Download New Themes
I'm using Obsidian headers.
They are not applied to new mails you write though.
Comment 17 Andras 2018-06-25 17:43:09 UTC
(In reply to michele mazza from comment #16)
> This can be worked around by installing and using different header themes.
> View -> Headers -> Download New Themes
> I'm using Obsidian headers.
> They are not applied to new mails you write though.

Thank you for your help however against reluctance I have to note it is NOT the solution. This issue should have been solved long ago. Also, only Obsidian suits for this work around. KDE application won't work in KDE environment out of the box for such a long time? It's nothing else but shame!

Resilient CSS please.
Comment 18 pixadi 2018-08-30 13:30:23 UTC
This bug still present as of kmail-18.04. Please escalate! We must resort to using Evolution in KDE environment until this is resolved, would much prefer to use native KDE/Qt app if it functioned properly
Comment 19 vp11 2018-10-19 12:07:11 UTC
I just wanted to report that this is still a problem. I'm using KDE with Breeze Dark and KMail comes close to unusable for reading and writing e-mails with the default black background. There has to be an easy solution that lets users choose a different "theme" that should work only in KMail.
Comment 20 Laurent Montel 2018-10-25 05:53:20 UTC
I work on it in 5.10.0
Comment 21 Nate Graham 2018-10-26 03:22:41 UTC
Awesome, thanks Laurent!
Comment 22 Laurent Montel 2018-10-26 12:02:03 UTC
Now we have a checkbox in config->kmail->color for using "real" color.
So it fixes problem with link color, background color.

It's not activate by default but we can activate it by default.

Only mail header use "user system colors"

So we can read html email.
Comment 23 Martin Steigerwald 2018-10-26 15:02:06 UTC
Thank you very much, Laurent.
Comment 24 Laurent Montel 2018-10-28 16:11:31 UTC
Git commit c574a68cf2c5fcc347b41159a17e170eafa0a067 by Laurent Montel.
Committed on 28/10/2018 at 16:10.
Pushed by mlaurent into branch 'master'.

Fix Bug 317803 - Kmail2 renders colors based on the user system colors rather than the default colors browsers use.

FIXED-IN: 5.10.0

M  +0    -6    CMakeLists.txt
M  +0    -1    messageviewer/src/config-messageviewer.h.cmake
M  +2    -2    messageviewer/src/viewer/csshelperbase.cpp

https://commits.kde.org/messagelib/c574a68cf2c5fcc347b41159a17e170eafa0a067
Comment 25 Jorge 2018-11-22 02:56:50 UTC
*** Bug 346135 has been marked as a duplicate of this bug. ***