Fix Bug 317803 - Kmail2 renders colors based on the user system colors rather than the default colors browsers use.

FIXED-IN: 5.10.0
BUG: 317803