messageviewer/src/config-messageviewer.h.cmake
@@ -1,2 +1,1 @@
 #cmakedefine HAVE_SYS_INOTIFY_H 1
-#cmakedefine USE_HTML_STYLE_COLOR 1
